--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ Format Specific Styles
   background-position: 0 -290px;
 }
 
-.single-heart-this:hover, {
+.single-heart-this:hover {
   color: #555;
 }
 
